--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hosting-app",
   "version": "0.1.0",
-  "homepage": "https://rony9843.github.io/hostaing-website",
+  "homepage": "https://queenzzone.online",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
